--- a/Tarea01/inicio.html
+++ b/Tarea01/inicio.html
@@ -34,7 +34,7 @@
         <h3>Sobre mi vida</h3>
 
         <p>
-          Soy de Arequipa Peru me gusta compartir conocimientos y vivencias, introvertido a veces... pero soy sociable.
+          Soy de <strong>Arequipa Peru</strong>  me gusta <em>compartir conocimientos y vivencias,</em> introvertido a veces... pero soy sociable.
         </p>
     
         <p>
