--- a/Tarea01/misgustos.html
+++ b/Tarea01/misgustos.html
@@ -10,7 +10,7 @@
         <h1>C. Jacob Apaza Prudencio</h1>
         <nav>
             <ul>
-                <li><a href="#">Sobre mi</a></li>
+                <li><a href="inicio.html">Sobre mi</a></li>
                 <li><a href="misgustos.html" target="_blank">Mis Gustos</a></li>
                 <li><a href="conocimientos.html">Mis conocimientos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
