--- a/Tarea01/inicio.html
+++ b/Tarea01/inicio.html
@@ -20,7 +20,7 @@
     </header>
     <h3>Mi foto</h3>
 
-    <img src="yo_s.jpg" alt="Jacob Apaza"  height="230" width="150"/>
+    <img src="yo_x4.jpg" alt="Jacob Apaza"  height="250" width="350"/>
 
 
     <main>
