--- a/Tarea01/misgustos.html
+++ b/Tarea01/misgustos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio CJAP</title>
+    <title>Mis gustos CJAP</title>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     </header>
     <h3>Mi foto</h3>
 
-    <img src="yo_s.jpg" alt="Jacob Apaza"  height="230" width="150"/>
+    <img src="yo_x4.jpg" alt="Jacob Apaza"  height="250" width="350"/>
 
 
     <main>
