--- a/Tarea01/conocimientos.html
+++ b/Tarea01/conocimientos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio CJAP</title>
+    <title>Conocimientos CJAP</title>
 </head>
 <body>
     <header>
